src/styles.css
/* Mobile Styling */

/* @media all and (min-width: 320px) { */
  /* All */
  html {
    width: 100vw;
    max-width: 100%;
    height: 100%;
    overflow-x: hidden;
  }

  body {
    margin: 0;
    border: 0;
    font-family: "Roboto Mono";
    max-width: 100%;
    height: 100%;
    background-color: #043144;
    border-color: #043144;
    color: #D4E0E5;

  }

  .page {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-top: 10%;
    border-top: 4px solid #1c5061;
  }

  /* Header Row */
  .header {
    display: flex;
    justify-content: space-between;
    height: 5%;
    margin-bottom: 5%;
    
  }

  .date {
    font-size: 1rem;
    margin-left: 1rem;
  }

  .greeting {
    font-family: "Permanent Marker";
    margin-right: 2rem;
  }

  .calendar {
    margin-right: 1rem;
    width: 60px;
    height: 60px;
  }

  /* Main Section */
  .main {
    height: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
  }

  /* Daily Section */
  canvas {
    background-color: #1c5061;
    border-radius: 10px;
    border-color: #1c5061;
    margin-bottom: 5%;
    
  }
  .daily-stats {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    font-family: "Permanent Marker";
    
  }

  .stats {
    margin-left: .2rem;
  }

  .steps,
  .water,
  .sleep {
    font-size: 13px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 2px solid #1c5061;
    padding: 4px 15px 3px;
    border-radius: 20px;
    background-color: #1c5061;
  }

  .steps-icon,
  .water-icon,
  .sleep-icon {
    width: 50px;
    height: 50px;
  }

  .steps-label,
  .water-label,
  .sleep-label {

  }

  /* Weekly Section */
  .weekly-activity {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .weekly-header {

  }

  .weekly-chart-title {

  }

  .weekly-line {
    height: 5em;
    width: 95%;
    border: 2px solid #1c5061;
  }

  .weekly-bar {
    height: 3em;
    width: 95%;
    border: 2px solid #1c5061;
  }

  .user-bar,
  .all-bar {

  }

  /* Activity Data Section  */
  .weekly-water-sleep {
    display: flex;
    justify-content: space-between;
    width: 95%;
    height: 20%;
  }

  .water-intake,
  .sleep-data {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .vert-bar {
    height: 60%;
    width: 60%;
  }

  .water-chart
  .sleep-chart {

  }

  .averages-section {
    display: flex;
    justify-content: center;
    width: 95%;
    height: 20%;
  }
  .average-sleep-hours,
  .average-sleep-quality {
    display: flex;
    font-family: "Permanent Marker";
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-bottom: 5px;
  }

  .avg-number {
    font-size: 2rem;
    border: 4px solid #f37981;
    border-radius: 50%;
    height: 100%;
    width: 50%;
    padding: 5%;
  }

  /* User Data Section  */
  .user-info-section {
    background-color: #011F2C;
    position: sticky;
    bottom: 0;
    display: flex;
    align-items: space-around;
    border-top-left-radius: 15px;
    border-bottom-right-radius: 15px;
    opacity: 75%;
  }
  
  .right-side {
    margin-right: 5px;
    margin-left: 5px;
  }

  .left-side {
    margin-left: 5px;
    margin-right: 5px;
  }


  .user-info {
    
  }
/* } */

/* Desktop Styling */

@media all and (min-width: 1000px) {
  /* All */
  html {
    /* display: grid;
    box-sizing: border-box; */
  }

  body {
    margin: 0;
    border: 0;
    font-family: "Roboto Mono";
  }

  /* * {
  border: red;
  border-style: dashed;
  } */

  /* Header Row */
  .header {
    display: flex;
    justify-content: space-between;
  }

  .date {
    font-size: 2rem;
    margin-left: 1rem;
  }

  .greeting {
    font-family: "Permanent Marker";
    margin-right: 20rem;
  }

  .calendar {
    margin-right: 1rem;
    width: 100px;
    height: 100px;
  }

  /* Main Section */
  .main {

  }

  /* Daily Section */
  .daily-stats {

  }

  .stats {

  }

  .steps,
  .water,
  .sleep {

  }

  .steps-icon,
  .water-icon,
  .sleep-icon {

  }

  .steps-label,
  .water-label,
  .sleep-label {

  }

  /* Weekly Section */
  .weekly-activity {

  }

  .weekly-header {

  }

  .weekly-chart-title {

  }

  .user-bar,
  .all-bar {

  }

  /* Activity Data Section  */
  .weekly-water-sleep {

  }

  .water-intake,
  .sleep-data {

  }

  .water-chart
  .sleep-chart {

  }

  .average-sleep-hours,
  .average-sleep-quality {

  }

  /* User Data Section  */
  .user-info-section {
    background-color: green;
  }

  .user-info {

  }
}

